fix(ui): adjust dealer label spacing

--- a/src/theme.css
+++ b/src/theme.css
@@ -513,7 +513,7 @@ a:visited {
 
 .dealer-title-gap {
   display: inline-block;
-  width: 3px;
+  width: 7px;
   vertical-align: baseline;
 }
 
